--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: labs_laskin
+name: lab
 description: A new Flutter project.
 
 # The following line prevents the package from being accidentally published to
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.9.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -37,12 +37,17 @@ dependencies:
   socket_io_client:
   bubble:
   flutter_document_picker:
-
-
-
+  flutter_login_vk:
+  vkio:
+  font_awesome_flutter:
+  flutter_webview_plugin:
+  flip_card:
+  encrypt:
+  firebase_core: 
+  firebase_analytics:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons:
+  cupertino_icons: ^1.0.2
 
 dev_dependencies:
   flutter_test:
