--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,5 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.lab">
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+   <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
    <application
         android:label="lab"
         android:icon="@mipmap/ic_launcher">
@@ -34,6 +37,9 @@
         </activity>
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
+          <activity android:name="com.vk.sdk.VKServiceActivity"
+          android:label="ServiceActivity"
+          android:theme="@style/VK.Transparent" />
         <meta-data
             android:name="flutterEmbedding"
             android:value="2" />
